--- a/Cargo.toml
+++ b/Cargo.toml
@@ -468,6 +468,7 @@ serde_test = "1.0.147"
 serde_with = "3.8"
 # serde_yaml = "0.9.21"
 serde_yaml = "0.8.26"
+serde_bytes = { version = "0.11", features = ["std"] }
 shell-words = "1.1.0"
 shellexpand = "3.1.0"
 signature = "1.6.0"
@@ -590,6 +591,9 @@ passkey-client = { version = "0.2.0" }
 passkey-authenticator = { version = "0.2.0" }
 coset = "0.3"
 p256 = { version = "0.13.2", features = ["ecdsa"] }
+
+p384 = { version = "0.13.0", default-features = false, features = ["ecdsa","sha384"] }
+ciborium = "0.2"
 
 # anemo dependencies
 anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "e609f7697ed6169bf0760882a0b6c032a57e4f3b" }
