--- a/consensus/core/Cargo.toml
+++ b/consensus/core/Cargo.toml
@@ -43,6 +43,7 @@ rustls.workspace = true
 serde.workspace = true
 shared-crypto.workspace = true
 strum_macros.workspace = true
+sui-config.workspace = true
 sui-macros.workspace = true
 sui-protocol-config.workspace = true
 sui-simulator.workspace = true
@@ -59,10 +60,10 @@ tower-http.workspace = true
 tracing.workspace = true
 typed-store.workspace = true
 tonic-rustls.workspace = true
+tempfile.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
-tempfile.workspace = true
 telemetry-subscribers.workspace = true
 
 [build-dependencies]
