--- a/crates/sui-rpc-api/Cargo.toml
+++ b/crates/sui-rpc-api/Cargo.toml
@@ -43,6 +43,7 @@ tonic.workspace = true
 prost.workspace = true
 prost-types = "0.13.3"
 bytes.workspace = true
+base64 = "0.22.1"
 
 [dev-dependencies]
 diffy = "0.3"
